<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.actelion.research.datawarrior</groupId>
	<artifactId>datawarrior</artifactId>
	<version>6.5.2</version>

	<name>datawarrior</name>
	<url>https://github.com/thsa/datawarrior</url>

	<licenses>
		<license>
			<name>GPL-3.0-only</name>
			<url>https://www.gnu.org/licenses/gpl-3.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<properties>
		<maven.min-version>3.6.3</maven.min-version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<!-- Use:

                     mvn versions:display-dependency-updates

		to check for updates for these below -->

		<openchemlib.version>2025.10.2</openchemlib.version>
		<fxmolviewer.version>1.0.0-SNAPSHOT</fxmolviewer.version>
		<radiance.version>8.0.0</radiance.version>
		<opsin.version>2.8.0</opsin.version>
		<jna-inchi.version>1.3.1</jna-inchi.version>
		<openjfx.version>21.0.8</openjfx.version>
		<batik.version>1.19</batik.version>
		<vecmath.version>1.5.2</vecmath.version>
		<jep.version>2.4.2</jep.version>
		<commons-math.version>2.2</commons-math.version>
		<orange-extensions.version>1.3.1</orange-extensions.version>
		<json.version>20250517</json.version>
		<xml-apis-ext.version>1.3.04</xml-apis-ext.version>
		<jblas.version>1.2.5</jblas.version>
		<ejml.version>0.44.0</ejml.version>
		<netlib.version>1.1.2</netlib.version>
		<commons-compiler.version>2.7.4</commons-compiler.version>

		<!-- DB drivers -->
		<ojdbc11.version>23.9.0.25.07</ojdbc11.version>
		<postgresql.version>42.7.7</postgresql.version>
		<mysql-connector-java.version>9.4.0</mysql-connector-java.version>
		<mssql-jdbc.version>13.2.0.jre11</mssql-jdbc.version>
		<!-- End DB drivers -->

		<!-- Use:

                     mvn versions:display-plugin-updates

                to check for updates for these below -->
		<maven-jar-plugin.version>3.4.2</maven-jar-plugin.version>
		<maven-dependency-plugin.version>3.8.1</maven-dependency-plugin.version>
		<maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
		<maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
		<maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
		<jpackage-maven-plugin.version>1.6.6</jpackage-maven-plugin.version>
		<maven-clean-plugin.version>3.4.1</maven-clean-plugin.version>
		<maven-shade-plugin.version>3.6.0</maven-shade-plugin.version>
		<maven-enforcer-plugin.version>3.5.0</maven-enforcer-plugin.version>
		<extra-enforcer-rules.version>1.10.0</extra-enforcer-rules.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math</artifactId>
			<version>${commons-math.version}</version>
		</dependency>

		<dependency>
			<groupId>com.actelion.research</groupId>
			<artifactId>openchemlib</artifactId>
			<version>${openchemlib.version}</version>
		</dependency>

		<dependency>
			<groupId>org.openmolecules.fx</groupId>
			<artifactId>fxmolviewer</artifactId>
			<version>${fxmolviewer.version}</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>${openjfx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-swing</artifactId>
			<version>${openjfx.version}</version>
		</dependency>

		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-web</artifactId>
			<version>${openjfx.version}</version>
		</dependency>

		<dependency>
			<groupId>org.scijava</groupId>
			<artifactId>jep</artifactId>
			<version>${jep.version}</version>
		</dependency>

		<dependency>
			<groupId>javax.vecmath</groupId>
			<artifactId>vecmath</artifactId>
			<version>${vecmath.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.xmlgraphics</groupId>
			<artifactId>batik-svggen</artifactId>
			<version>${batik.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.xmlgraphics</groupId>
			<artifactId>batik-dom</artifactId>
			<version>${batik.version}</version>
			<exclusions>
				<exclusion>
					<groupId>xml-apis</groupId>
					<artifactId>xml-apis</artifactId>
				</exclusion>
			</exclusions>
		</dependency>


		<dependency>
			<groupId>org.apache.xmlgraphics</groupId>
			<artifactId>batik-swing</artifactId>
			<version>${batik.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.xmlgraphics</groupId>
			<artifactId>batik-transcoder</artifactId>
			<version>${batik.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.xmlgraphics</groupId>
			<artifactId>batik-awt-util</artifactId>
			<version>${batik.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.xmlgraphics</groupId>
			<artifactId>batik-bridge</artifactId>
			<version>${batik.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.xmlgraphics</groupId>
			<artifactId>batik-anim</artifactId>
			<version>${batik.version}</version>
		</dependency>

		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>${json.version}</version>
		</dependency>

		<dependency>
			<groupId>org.pushing-pixels</groupId>
			<artifactId>radiance-common</artifactId>
			<version>${radiance.version}</version>
		</dependency>

		<dependency>
			<groupId>org.pushing-pixels</groupId>
			<artifactId>radiance-theming</artifactId>
			<version>${radiance.version}</version>
		</dependency>

		<dependency>
			<groupId>org.pushing-pixels</groupId>
			<artifactId>radiance-swing-ktx</artifactId>
			<version>${radiance.version}</version>
		</dependency>

		<dependency>
			<groupId>io.github.dan2097</groupId>
			<artifactId>jna-inchi-all</artifactId>
			<version>${jna-inchi.version}</version>
		</dependency>

		<dependency>
			<groupId>uk.ac.cam.ch.opsin</groupId>
			<artifactId>opsin-core</artifactId>
			<version>${opsin.version}</version>
		</dependency>

		<dependency>
			<groupId>com.massisframework</groupId>
			<artifactId>orange-extensions</artifactId>
			<version>${orange-extensions.version}</version>
		</dependency>

		<dependency>
			<groupId>xml-apis</groupId>
			<artifactId>xml-apis-ext</artifactId>
			<version>${xml-apis-ext.version}</version>
		</dependency>

		<dependency>
			<groupId>org.jblas</groupId>
			<artifactId>jblas</artifactId>
			<version>${jblas.version}</version>
		</dependency>

		<dependency>
			<groupId>org.ejml</groupId>
			<artifactId>ejml-all</artifactId>
			<version>${ejml.version}</version>
		</dependency>

		<dependency>
			<groupId>com.github.fommil.netlib</groupId>
			<artifactId>all</artifactId>
			<type>pom</type>
			<version>${netlib.version}</version>
		</dependency>

		<dependency>
			<groupId>org.codehaus.janino</groupId>
			<artifactId>commons-compiler</artifactId>
			<version>${commons-compiler.version}</version>
		</dependency>

		<dependency>
			<groupId>com.oracle.database.jdbc</groupId>
			<artifactId>ojdbc11</artifactId>
			<version>${ojdbc11.version}</version>
		</dependency>

		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>${postgresql.version}</version>
		</dependency>

		<dependency>
			<groupId>com.mysql</groupId>
			<artifactId>mysql-connector-j</artifactId>
			<version>${mysql-connector-java.version}</version>
		</dependency>

		<dependency>
			<groupId>com.microsoft.sqlserver</groupId>
			<artifactId>mssql-jdbc</artifactId>
			<version>${mssql-jdbc.version}</version>
		</dependency>


	</dependencies>


	<!-- Profiles to control platform specific package builds -->
	<profiles>
		<profile>
			<id>windows</id>
			<activation>
				<os>
					<family>windows</family>
				</os>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.panteleyev</groupId>
						<artifactId>jpackage-maven-plugin</artifactId>
						<version>${jpackage-maven-plugin.version}</version>

						<configuration>
							<winMenu>true</winMenu>
							<!-- temp hack since Wix does not like SNAPSHOT
							suffix -->
							<appVersion>6.2.0</appVersion>
                                                        <icon>./src/main/resources/jpackage/win/datawarrior.ico</icon>
						</configuration>
					</plugin>
				</plugins>
			</build>

		</profile>
		<profile>
			<id>mac</id>
			<activation>
				<os>
					<family>mac</family>
				</os>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.panteleyev</groupId>
						<artifactId>jpackage-maven-plugin</artifactId>
						<version>${jpackage-maven-plugin.version}</version>

						<configuration>
							<!-- temp hack since Mac DMG Package does not like
							SNAPSHOT suffix -->
							<appVersion>6.2.0</appVersion>
							<mainClass>
									com.actelion.research.datawarrior.DataWarriorOSX</mainClass>
							<icon>./src/main/resources/jpackage/mac/datawarrior.icns</icon>
						</configuration>
					</plugin>
				</plugins>
			</build>

		</profile>
		<profile>
			<id>linux</id>
			<activation>
				<os>
					<name>Linux</name>
				</os>
			</activation>

			<build>
				<plugins>
					<plugin>
						<groupId>org.panteleyev</groupId>
						<artifactId>jpackage-maven-plugin</artifactId>
						<version>${jpackage-maven-plugin.version}</version>
						<configuration>
                                                        <icon>./src/main/resources/jpackage/linux/datawarrior.png</icon>
                                                </configuration>
					</plugin>
				</plugins>
			</build>

		</profile>
	</profiles>


	<build>
		<plugins>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>${maven-jar-plugin.version}</version>
				<configuration>
					<outputDirectory>${project.build.directory}/libs</outputDirectory>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.panteleyev</groupId>
				<artifactId>jpackage-maven-plugin</artifactId>
				<version>${jpackage-maven-plugin.version}</version>
				<configuration>
					<name>${project.name}</name>
					<appVersion>${project.version}</appVersion>
					<input>${project.build.directory}/libs</input>
					<mainJar>datawarrior-${project.version}.jar</mainJar>
					<mainClass>
						com.actelion.research.datawarrior.DataWarriorLinux</mainClass>
					<destination>${project.build.directory}/dist</destination>
					<fileAssociations>
						<fileAssociation>
							src/main/resources/jpackage/dwar.properties</fileAssociation>
						<fileAssociation>
							src/main/resources/jpackage/dwat.properties</fileAssociation>
						<fileAssociation>
							src/main/resources/jpackage/dwaq.properties</fileAssociation>
						<fileAssociation>
							src/main/resources/jpackage/dwas.properties</fileAssociation>
						<fileAssociation>
							src/main/resources/jpackage/dwam.properties</fileAssociation>
						<fileAssociation>
							src/main/resources/jpackage/sdf.properties</fileAssociation>
					</fileAssociations>
				</configuration>

				<executions>
					<execution>
						<id>jpackage-installer</id>
						<phase>package</phase>
						<goals>
							<goal>jpackage</goal>
						</goals>
					</execution>
				</executions>

			</plugin>


			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>${maven-enforcer-plugin.version}</version>
				<executions>

					<execution>
						<id>enforce-bytecode-version</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<enforceBytecodeVersion>
									<maxJdkVersion>${maven.compiler.target}</maxJdkVersion>
								</enforceBytecodeVersion>
							</rules>
							<fail>true</fail>
						</configuration>
					</execution>

					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>${maven.min-version}</version>
								</requireMavenVersion>
							</rules>
						</configuration>
					</execution>

					<execution>
						<id>enforce-os-profile</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireActiveProfile>
									<profiles>windows,mac,linux</profiles>
									<all>false</all>
								</requireActiveProfile>
							</rules>
							<fail>true</fail>
						</configuration>
					</execution>

				</executions>
				<dependencies>
					<dependency>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>extra-enforcer-rules</artifactId>
						<version>${extra-enforcer-rules.version}</version>
					</dependency>
				</dependencies>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>${maven-dependency-plugin.version}</version>
				<executions>
					<execution>
						<id>copy-dependencies</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>copy-dependencies</goal>
						</goals>
						<configuration>
							<outputDirectory>
								${project.build.directory}/libs
							</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>


			<plugin>
				<artifactId>maven-clean-plugin</artifactId>
				<version>${maven-clean-plugin.version}</version>
			</plugin>
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<version>${maven-resources-plugin.version}</version>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<compilerArgs>
						<arg>--add-exports</arg>
						<arg>java.base/jdk.internal.module=ALL-UNNAMED</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
			</plugin>
		</plugins>
	</build>
</project>
